# eCompiler

./: CMakeLists.txt  README.md
data/: main.asm  main.ts
include/Core/: Core.h  Extensions.h
include/IO/: Logger.h
include/Interpreter/: Access.h  And.h  Arithmetic.h  Constant.h  ConstantTable.h  Expression.h  Id.h  Logical.h  Node.h  Not.h  Operand.h  Or.h  Relation.h  Temp.h  Unary.h
include/Interpreter/Constructions/: Break.h  Do.h  Else.h  If.h  Read.h  Sequence.h  Set.h  SetElement.h  Statement.h  Stmt.h  While.h  Write.h
include/Lexer/: Lexer.h  Num.h  Real.h  String.h  Tag.h  Token.h  Word.h  WordTable.h
include/Parser/: Parser.h
include/SymbolTable/: Array.h  Env.h  Type.h  TypeTable.h
src/: main.cpp
src/Core/: Core.cpp
src/IO/: Logger.cpp
src/Interpreter/: Access.cpp  And.cpp  Arithmetic.cpp  Constant.cpp  ConstantTable.cpp  Expression.cpp  Id.cpp  Logical.cpp  Node.cpp  Not.cpp  Operand.cpp  Or.cpp  Relation.cpp  Temp.cpp  Unary.cpp
src/Interpreter/Constructions/: Break.cpp  Do.cpp  Else.cpp  If.cpp  Read.cpp  Sequence.cpp  Set.cpp  SetElement.cpp  Statement.cpp  Stmt.cpp  While.cpp  Write.cpp
src/Lexer/: Lexer.cpp  Num.cpp  Real.cpp  String.cpp  Tag.cpp  Token.cpp  Word.cpp  WordTable.cpp
src/Parser/: Parser.cpp
src/SymbolTable/: Array.cpp  Env.cpp  Type.cpp  TypeTable.cpp
